Refactor `MarkovCheck`, `VertexCheckIndTestModel`, and `VertexRepairSearch`: improve caching with `CachedIndependenceQueries`, add deterministic sorting, and enhance Javadoc for constructors and methods.